# financial-control-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.cursor/: mcp.json.example
.cursor/commands/: next-task.md  progress-finish-task.md  progress-start-task.md  resume-work.md  validate-dod.md
.cursor/commands/tm/: goham.md
.cursor/rules/: api-conventions.mdc  database.mdc  implementation.md  implementation.mdc  learnings.md  learnings.mdc  progress-tracker.md  project-context.md  security.md  security.mdc  testing.mdc
.cursor/skills/: Technical Design Doc Creator  cursor-skill-creator
.cursor/skills/pr-workflow/: SKILL.md
.cursor/skills/progress-tracker/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.taskmaster/: state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
alembic/: env.py
alembic/versions/: 001_add_users_table.py  002_add_cards_and_categories_tables.py
docs/: ADR.md  ARCHITECTURE.md  DISCOVERY.md  MELHORIAS.MD  PRD.md  PRD_v2.md  PROGRESS-OLD.md  PROGRESS.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  TECH_SPECS.md
src/: main.py
src/bot/: app.py
src/bot/handlers/: audio.py  auth_helpers.py  cards.py  categories.py  login.py  start.py
src/bot/keyboards/: __init__.py
src/core/: config.py
src/db/: __init__.py  engine.py  seed.py  session.py
src/models/: __init__.py  card.py  category.py  user.py
src/services/auth/: __init__.py  pin_service.py  session.py
src/services/cards/: __init__.py  validation.py
src/services/extraction/: __init__.py  gemini_extraction.py  models.py  prompts.py
src/services/learning/: __init__.py
src/services/transcription/: __init__.py  groq_whisper.py
tests/: conftest.py
tests/integration/: test_example.py
tests/unit/: test_audio_handler.py  test_card_validation.py  test_cards_handler.py  test_categories_handler.py  test_example.py  test_extraction_service.py  test_login_handler.py  test_onboarding_wizard.py  test_pin_service.py  test_seed.py  test_session.py  test_start_handler_pin_validation.py  test_transcription_service.py  test_user_model.py
