[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-bot"
version = "0.1.0"
description = "Bot Telegram para registro de despesas pessoais via áudio"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot==22.5",
    "pydantic-settings==2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
